data/derived/sp14/progs/unify/prog3031.ml.out
Characters 0-2:
  4. * 3.;;
  ^^
Error: This expression has type float but an expression was expected of type
         int
